--- a/views/home.ejs
+++ b/views/home.ejs
@@ -974,24 +974,33 @@
                         data-effect="false" data-delay="2500" data-item="4" data-item-xl="3" data-item-lg="3"
                         data-item-md="2" data-item-sm="2" data-item-xs="1" data-item-mobile="1" data-margin="30">
 
-                        <div class="swiper-wrapper">
+                       <div class="swiper-wrapper">
 
-                            <!-- Product F40 -->
+                    <% if (products && products.length > 0) { %>
+                        <% products.forEach(product => { %>
                             <div class="swiper-slide">
                                 <div class="rs-portfolio-item">
+
                                     <div class="rs-portfolio-thumb">
-                                        <img src="/images/teraxo/prd-2.webp" alt="F40 Product">
+                                        <img src="/uploads/<%= product.images[0] %>" alt="<%= product.title %>">
                                     </div>
+
                                     <div class="rs-portfolio-content">
                                         <h5 class="rs-portfolio-title underline has-white">
-                                            <a href="/productDetails/:slug">F40</a>
+                                            <a href="/productDetails/<%= product.slug %>"><%= product.title %></a>
                                         </h5>
+
                                         <div class="rs-portfolio-tag">
-                                            <a href="/productDetails/:slug">Footwear Manufacturing</a>
+                                            <a href="/productDetails/<%= product.slug %>">
+                                                <%= product.subDescription ? product.subDescription.substring(0, 40) : "Product" %>
+                                            </a>
                                         </div>
                                     </div>
+
                                     <div class="rs-portfolio-btn">
-                                        <a class="rs-btn has-theme-light-green has-circle has-icon" href="/productDetails/:slug">
+                                        <a class="rs-btn has-theme-light-green has-circle has-icon" 
+                                        href="/productDetails/<%= product.slug %>">
+
                                             <span class="icon-box">
                                                 <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                                     <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
@@ -1000,128 +1009,21 @@
                                                     <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
                                                 </svg>
                                             </span>
+
                                         </a>
                                     </div>
+
                                 </div>
                             </div>
-
-                            <!-- Product R40 -->
-                            <div class="swiper-slide">
-                                <div class="rs-portfolio-item">
-                                    <div class="rs-portfolio-thumb">
-                                        <img src="/images/teraxo/prd-2.webp" alt="R40 Product">
-                                    </div>
-                                    <div class="rs-portfolio-content">
-                                        <h5 class="rs-portfolio-title underline has-white">
-                                            <a href="/productDetails/:slug">R40</a>
-                                        </h5>
-                                        <div class="rs-portfolio-tag">
-                                            <a href="/productDetails/:slug">Signage & Flex Board</a>
-                                        </div>
-                                    </div>
-                                    <div class="rs-portfolio-btn">
-                                        <a class="rs-btn has-theme-light-green has-circle has-icon" href="/productDetails/:slug">
-                                            <span class="icon-box">
-                                                <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                                    <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
-                                                </svg>
-                                                <svg class="icon-second" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                                    <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
-                                                </svg>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Product FX40 -->
-                            <div class="swiper-slide">
-                                <div class="rs-portfolio-item">
-                                    <div class="rs-portfolio-thumb">
-                                        <img src="/images/teraxo/prd-2.webp" alt="FX40 Product">
-                                    </div>
-                                    <div class="rs-portfolio-content">
-                                        <h5 class="rs-portfolio-title underline has-white">
-                                            <a href="/productDetails/:slug">FX40</a>
-                                        </h5>
-                                        <div class="rs-portfolio-tag">
-                                            <a href="/productDetails/:slug">Furniture & Woodworking</a>
-                                        </div>
-                                    </div>
-                                    <div class="rs-portfolio-btn">
-                                        <a class="rs-btn has-theme-light-green has-circle has-icon" href="/productDetails/:slug">
-                                            <span class="icon-box">
-                                                <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                                    <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
-                                                </svg>
-                                                <svg class="icon-second" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                                    <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
-                                                </svg>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Product W40 -->
-                            <div class="swiper-slide">
-                                <div class="rs-portfolio-item">
-                                    <div class="rs-portfolio-thumb">
-                                        <img src="/images/teraxo/prd-2.webp" alt="W40 Product">
-                                    </div>
-                                    <div class="rs-portfolio-content">
-                                        <h5 class="rs-portfolio-title underline has-white">
-                                            <a href="/productDetails/:slug">W40</a>
-                                        </h5>
-                                        <div class="rs-portfolio-tag">
-                                            <a href="/productDetails/:slug">Interiors & Kitchens</a>
-                                        </div>
-                                    </div>
-                                    <div class="rs-portfolio-btn">
-                                        <a class="rs-btn has-theme-light-green has-circle has-icon" href="/productDetails/:slug">
-                                            <span class="icon-box">
-                                                <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                                    <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
-                                                </svg>
-                                                <svg class="icon-second" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                                    <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
-                                                </svg>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Product G40 -->
-                            <div class="swiper-slide">
-                                <div class="rs-portfolio-item">
-                                    <div class="rs-portfolio-thumb">
-                                        <img src="/images/teraxo/prd-2.webp" alt="G40 Product">
-                                    </div>
-                                    <div class="rs-portfolio-content">
-                                        <h5 class="rs-portfolio-title underline has-white">
-                                            <a href="/productDetails/:slug">G40</a>
-                                        </h5>
-                                        <div class="rs-portfolio-tag">
-                                            <a href="/productDetails/:slug">Automotive Aftermarket</a>
-                                        </div>
-                                    </div>
-                                    <div class="rs-portfolio-btn">
-                                        <a class="rs-btn has-theme-light-green has-circle has-icon" href="/productDetails/:slug">
-                                            <span class="icon-box">
-                                                <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                                    <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
-                                                </svg>
-                                                <svg class="icon-second" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                                    <path d="M31.71,15.29l-10-10L20.29,6.71,28.59,15H0v2H28.59l-8.29,8.29,1.41,1.41,10-10A1,1,0,0,0,31.71,15.29Z"></path>
-                                                </svg>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
+                        <% }); %>
+                    <% } else { %>
+                        <div class="swiper-slide">
+                            <p class="text-center text-white">No products available</p>
                         </div>
+                    <% } %>
+
+                </div>
+
 
                         <!-- Pagination -->
                         <div class="rs-portfolio-pagination">
